# speakit

./: .air.toml  .gitignore  Dockerfile  README.md  Taskfile.yml  app.go  cli.go  cmdcapture.go  cmdcollect.go  cmdopenapi.go  cmdserve.go  cmdsonos.go  cmdsonos_conn.go  cmdsonos_discover.go  cmdsonos_serve.go  cmdspeaker.go  cmdspeech.go  collect.go  compose.yml  designdoc.md  docker-compose.yaml  go.mod  go.sum  main.go  openapi.go  route.go  serve.go  sonos.go  spec.go  taskfile.yaml  tryfetch.go
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  pushimage.yaml  release.yaml
admin/: .gitignore  Dockerfile  next.config.js  orval.config.ts  package.json  panda.config.ts  pnpm-lock.yaml  serve.go  servedev.go  servedist.go
admin/public/: sw.js.map
apps/admin/: .devcontainer.json  .gitignore  Dockerfile  README.md  next.config.js  orval.config.ts  package.json  (+1 more)
apps/sonos/: pyproject.toml
apps/sonos/app/: main.py
cmd/: main.go  prot.go  root.go  sonos.go
controller/: convert.go  feedfetch.go  feeds.go  jobs.go  main.go  program_convert.go  programs.go  storage.go  web.go
handler/: contents.go  feeds.go  jobs.go  voicevox.go
kitprot/: app.go  behave_log.go  behave_notify.go  behave_pw.go  callfn.go  control.go  control_eightbit.go  generate.go  generate_rss.go  skip.go  skip_unique.go  speak.go  speak_beep.go  speak_sonos.go  transform.go  transform_ai.go  transform_aivoice.go
repository/: httpcall.go  main.go  minio.go  redis.go  repos.go  storage.go  voicevox.go
service/: feed.go  program.go  programs.go  util.go  voicevox.go
(+160 files in other folders)
