[tool.poetry]
name = "sonos"
version = "0.1.0"
description = ""
authors = []
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
soco = "^0.29.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:main"